--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </style>
     </head>
     <body>
-        <canvas id="myCanvas" wigth="800" height="600"></canvas>
+        <canvas id="myCanvas" width="800" height="600"></canvas>
         <script src="main.js"></script>
     </body>
 </html>
