--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>Canvasで画像を描画</title>
-        <style>
-            canvas{
-                border:1px solid black;
-            }
-        </style>
+        <title>せとのもり</title>
     </head>
     <body>
+        
         <canvas id="myCanvas" width="800" height="600"></canvas>
         <script src="main.js"></script>
+        <link rel="stylesheet" herf="style.css">
     </body>
 </html>
