--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
         <title>せとのもり</title>
     </head>
     <body>
-        
+        <biv>
+            <biv>活動</biv>
+            <biv>メンバー紹介</biv>
+        </biv>
         <canvas id="myCanvas" width="800" height="600"></canvas>
         <script src="main.js"></script>
         <link rel="stylesheet" herf="style.css">
