--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>せとのもり</title>
     </head>
     <body>
+        <picture src=""></picture>
         <biv>
             <biv>活動</biv>
             <biv>メンバー紹介</biv>
