--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
         <title>せとのもり</title>
     </head>
     <body>
-        <picture src=""></picture>
+        <img src="">
+        <a href="https://www.town.osakikamijima.hiroshima.jp/index.html">大崎上島ホームページ</a>
+        <a href="">インスタ</a>
+        <a href="">クラウドファウンディング</a> 
         <biv>
-            <biv>活動</biv>
+            <biv>活動の背景</biv>
             <biv>メンバー紹介</biv>
+            <biv>概要</biv>
+            <biv>活動紹介</biv>
+            <biv>活動実績</biv>
+            <biv>活動理念</biv>
+            <biv></biv>
+            <biv></biv>
         </biv>
         <canvas id="myCanvas" width="800" height="600"></canvas>
         <script src="main.js"></script>
