--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <a href="">インスタ</a>
         <a href="">クラウドファウンディング</a> 
         <biv>
-            <biv>活動の背景</biv>
+            <p><biv>活動の背景</biv></p>
             <biv>メンバー紹介</biv>
             <biv>概要</biv>
             <biv>活動紹介</biv>
