--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
         <title>せとのもり</title>
     </head>
     <body>
-        <img src="">
-        <a href="https://www.town.osakikamijima.hiroshima.jp/index.html">大崎上島ホームページ</a>
-        <a href="">インスタ</a>
-        <a href="">クラウドファウンディング</a> 
         <biv>
             <p><biv>活動の背景</biv></p>
-            <biv>メンバー紹介</biv>
-            <biv>概要</biv>
-            <biv>活動紹介</biv>
-            <biv>活動実績</biv>
-            <biv>活動理念</biv>
-            <biv></biv>
-            <biv></biv>
+            <p><biv>メンバー紹介</biv></p>
+            <p><biv>概要</biv></p>
+            <p><biv>活動紹介</biv></p>
+            <p><biv>活動実績</biv></p>
+            <p><biv>活動理念</biv></p>
+            <p><biv></biv></p>
+            <p><biv></biv></p>
+            <p><img src=""></p>
+            <p><a href="https://www.town.osakikamijima.hiroshima.jp/index.html">大崎上島ホームページ</a></p>
+            <p><a href="">インスタ</a></p>
+            <p><a href="">クラウドファウンディング</a></p> 
         </biv>
         <canvas id="myCanvas" width="800" height="600"></canvas>
         <script src="main.js"></script>
