--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>せとのもり</title>
     </head>
     <body>
-        <p><img src=""></p>
+        <p><img src="syugou.jpg"></p>
         <biv>
             <p><biv>活動の背景</biv></p>
             <p><biv>メンバー紹介</biv></p>
