--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p><biv></biv></p>
             <p><a href="https://www.town.osakikamijima.hiroshima.jp/index.html">大崎上島ホームページ</a></p>
             <p><a href="https://www.instagram.com/setonomori_/?utm_source=ig_web_button_share_sheet">インスタグラム setonomori_</a></p>
-            <p><a href="">クラウドファウンディング cameing soon</a></p> 
+            <p><a href="">クラウドファウンディング </a></p> 
         </biv>
         <canvas id="myCanvas" width="800" height="600"></canvas>
         <script src="main.js"></script>
