--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>せとのもり</title>
     </head>
     <body>
-        <img src="syugou.jpg">
+        <img src="syugou.jpg" width="100px" height="250px">
         <biv>
             <p><biv>活動の背景</biv></p>
             <p><biv>メンバー紹介</biv></p>
