--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>せとのもり</title>
     </head>
     <body>
+        <p>せとのもり</p>
         <img src="syugou.jpg" width="500px" height="300px">
         <biv>
             <p><biv>活動の背景</biv></p>
