--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
         <title>せとのもり</title>
     </head>
     <body>
+        <biv class="syugou">
+        <biv class="moji">
         <p>せとのもり</p>
-        <img src="syugou.jpg" width="500px" height="300px">
+        </biv>
+        </biv>
         <biv>
             <p><biv>活動の背景</biv></p>
             <p><biv>メンバー紹介</biv></p>
