--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
         </biv>
         <canvas id="myCanvas" width="800" height="600"></canvas>
         <script src="main.js"></script>
-        <link rel="stylesheet" herf="style.css">
+        <link rel="stylesheet" href="style.css">
     </body>
 </html>
