--- a/index.html
+++ b/index.html
@@ -5,24 +5,22 @@
         <title>せとのもり</title>
     </head>
     <body>
-        <biv class="syugou">
-        <biv class="moji">
+        <div class="syugou">
+        <div class="moji">
         <p>せとのもり</p>
-        </biv>
-        </biv>
-        <biv>
-            <p><biv>活動の背景</biv></p>
-            <p><biv>メンバー紹介</biv></p>
-            <p><biv>概要</biv></p>
-            <p><biv>活動紹介</biv></p>
-            <p><biv>活動実績</biv></p>
-            <p><biv>活動理念</biv></p>
-            <p><biv></biv></p>
-            <p><biv></biv></p>
+        </div>
+        </div>
+        <div>
+            <p><div>活動の背景</div></p>
+            <p><div>メンバー紹介</div></p>
+            <p><div>概要</div></p>
+            <p><div>活動紹介</div></p>
+            <p><div>活動実績</div></p>
+            <p><div>活動理念</div></p>
             <p><a href="https://www.town.osakikamijima.hiroshima.jp/index.html">大崎上島ホームページ</a></p>
             <p><a href="https://www.instagram.com/setonomori_/?utm_source=ig_web_button_share_sheet">インスタグラム setonomori_</a></p>
             <p><a href="">クラウドファウンディング </a></p> 
-        </biv>
+        </div>
         <canvas id="myCanvas" width="800" height="600"></canvas>
         <script src="main.js"></script>
         <link rel="stylesheet" href="style.css">
