--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p><a href="https://www.instagram.com/setonomori_/?utm_source=ig_web_button_share_sheet">インスタグラム setonomori_</a></p>
             <p><a href="">クラウドファウンディング </a></p> 
         </div>
-        <canvas id="myCanvas" width="800" height="600"></canvas>
+        <canvas id="myCanvas"></canvas>
         <script src="main.js"></script>
         <link rel="stylesheet" href="style.css">
     </body>
