--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
         <title>せとのもり</title>
     </head>
     <body>
-        <div class="syugou">
-        <div class="moji">
-        <p>せとのもり</p>
-        </div>
-        </div>
+        <img src="syugou.jpg" alt="せとのもり" width="50%">
         <div>
             <p><div>活動の背景</div></p>
             <p><div>メンバー紹介</div></p>
