--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>せとのもり</title>
     </head>
     <body>
-        <img src="syugou.jpg" alt="せとのもり" height="50%">
+        <img src="syugou.jpg" alt="せとのもり" width="40%">
         <div>
             <p><div>活動の背景</div></p>
             <p><div>メンバー紹介</div></p>
