--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>せとのもり</title>
     </head>
     <body>
+        <a>せとのもり</a>
         <img src="syugou.jpg" alt="せとのもり" width="60%">
         <div>
             <p><div>活動の背景</div></p>
