--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>せとのもり</title>
     </head>
     <body>
-        <img src="syugou.jpg" alt="せとのもり" width="75%">
+        せとのもり
+        <p><img src="syugou.jpg" alt="せとのもり" width="85%"></p>
         <div>
             <p><div>活動の背景</div></p>
             <p><div>メンバー紹介</div></p>
