--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>せとのもり</title>
     </head>
     <body>
-        せとのもり
-        <p><img src="syugou.jpg" alt="せとのもり" width="85%"></p>
+        <a class="name">せとのもり</a> 
+        <p><img src="syugou.jpg" alt="せとのもり" width="100%"></p>
         <div>
             <p><div>活動の背景</div></p>
             <p><div>メンバー紹介</div></p>
