--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>せとのもり</title>
     </head>
     <body>
-        <a class="name">せとのもり</a> 
+        <div class="name">せとのもり</div> 
         <p><img src="syugou.jpg" alt="せとのもり" width="100%"></p>
         <div>
             <p><div>活動の背景</div></p>
