--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
         <title>せとのもり</title>
     </head>
     <body>
-        <div class="name">せとのもり</div> 
+        <div class="midasi">せとのもり</div> 
         <p><img src="syugou.jpg" alt="せとのもり" width="100%"></p>
         <div>
-            <p><div>活動の背景</div></p>
-            <p><div>メンバー紹介</div></p>
-            <p><div>概要</div></p>
-            <p><div>活動紹介</div></p>
-            <p><div>活動実績</div></p>
-            <p><div>活動理念</div></p>
+            <p><div class="midesi">活動の背景</div></p>
+            <p><div class="midesi">メンバー紹介</div></p>
+            <p><div class="midesi">概要</div></p>
+            <p><div class="midesi">活動紹介</div></p>
+            <p><div class="midesi">活動実績</div></p>
+            <p><div class="midesi">活動理念</div></p>
             <p><a href="https://www.town.osakikamijima.hiroshima.jp/index.html">大崎上島ホームページ</a></p>
             <p><a href="https://www.instagram.com/setonomori_/?utm_source=ig_web_button_share_sheet">インスタグラム setonomori_</a></p>
             <p><a href="">クラウドファウンディング </a></p> 
