--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
         <p><img src="syugou.jpg" alt="せとのもり" width="100%"></p>
         <div>
             <p><div class="midesi">活動の背景</div></p>
+            <div class="hai"></div>
             <p><div class="midesi">メンバー紹介</div></p>
+            <div class="hai"></div>
             <p><div class="midesi">概要</div></p>
+            <div class="hai"></div>
             <p><div class="midesi">活動紹介</div></p>
+            <div class="hai"></div>
             <p><div class="midesi">活動実績</div></p>
+            <div class="hai"></div>
             <p><div class="midesi">活動理念</div></p>
+            <div class="hai"></div>
             <p><a href="https://www.town.osakikamijima.hiroshima.jp/index.html">大崎上島ホームページ</a></p>
             <p><a href="https://www.instagram.com/setonomori_/?utm_source=ig_web_button_share_sheet">インスタグラム setonomori_</a></p>
             <p><a href="">クラウドファウンディング </a></p> 
