--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
         <div class="midasi">せとのもり</div> 
         <p><img src="syugou.jpg" alt="せとのもり" width="100%"></p>
         <div>
-            <p><div class="midesi">活動の背景</div></p>
-            <div class="hai"></div>
+            <div class="midesi"><p3>活動の背景</p3></div>
+            <div class="hai">
+                <p>大崎上島の環境保護団体「せとのもり」発足！！</p>
+                <p></p>
+
+            </div>
             <p><div class="midesi">メンバー紹介</div></p>
             <div class="hai"></div>
             <p><div class="midesi">概要</div></p>
