--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
                 <p></p>
 
             </div>
-            <p><div class="midesi">メンバー紹介</div></p>
-            <div class="hai"></div>
-            <p><div class="midesi">概要</div></p>
-            <div class="hai"></div>
-            <p><div class="midesi">活動紹介</div></p>
-            <div class="hai"></div>
-            <p><div class="midesi">活動実績</div></p>
-            <div class="hai"></div>
-            <p><div class="midesi">活動理念</div></p>
-            <div class="hai"></div>
+            <div class="midesi"><p3>メンバー紹介</p3></div>
+             <div class="hai"></div>
+            <div class="midesi"><p3>概要</p3></div>
+             <div class="hai"></div>
+            <div class="midesi"><p3>活動紹介</p3></div>
+             <div class="hai"></div>
+            <div class="midesi"><p3>活動実績</p3></div>
+             <div class="hai"></div>
+            <div class="midesi"><p3>活動理念</p3></div>
+             <div class="hai"></div>
             <p><a href="https://www.town.osakikamijima.hiroshima.jp/index.html">大崎上島ホームページ</a></p>
             <p><a href="https://www.instagram.com/setonomori_/?utm_source=ig_web_button_share_sheet">インスタグラム setonomori_</a></p>
             <p><a href="">クラウドファウンディング </a></p> 
