--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div class="midasi">せとのもり</div> 
         <p><img src="syugou.jpg" alt="せとのもり" width="100%"></p>
         <div>
-            <div class="midesi"><p3>活動の背景</p3></div>
+            <div class="midesi">活動の背景</div>
             <div class="hai">
                 <p>大崎上島の環境保護団体「せとのもり」発足！！</p>
                 <p></p>
