--- a/index.html
+++ b/index.html
@@ -1,35 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="utf-8">
-        <title>せとのもり</title>
-    </head>
-    <body>
-        <div class="midasi">せとのもり</div> 
-        <p><img src="syugou.jpg" alt="せとのもり" width="100%"></p>
-        <div>
-            <div class="midasi">活動の背景</div>
-            <div class="hai">
-                <p>大崎上島の環境保護団体「せとのもり」発足！！</p>
-                <p>マイプロジェクトアワードをきっかけに集まった
-                </p>
-            </div>
-            <div class="midasi">メンバー紹介</div>
-             <div class="hai"></div>
-            <div class="midasi">概要</div>
-             <div class="hai"></div>
-            <div class="midasi">活動紹介</div>
-             <div class="hai"></div>
-            <div class="midasi">活動実績</div>
-             <div class="hai"></div>
-            <div class="midasi">活動理念</div>
-             <div class="hai"></div>
-            <p><a href="https://www.town.osakikamijima.hiroshima.jp/index.html">大崎上島ホームページ</a></p>
-            <p><a href="https://www.instagram.com/setonomori_/?utm_source=ig_web_button_share_sheet">インスタグラム setonomori_</a></p>
-            <p><a href="">クラウドファウンディング </a></p> 
-        </div>
-        <canvas id="myCanvas"></canvas>
-        <script src="main.js"></script>
-        <link rel="stylesheet" href="style.css">
-    </body>
+<head>
+    <meta charset="utf-8"/>
+    <title></title>
+</head>
+<body>
+    <canvas></canvas>
+</body>
 </html>
