--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="utf-8"/>
     <title></title>
+    <style>
+        body{
+         margin: 0;
+         overflow: hidden;
+         background: #111;
+        }
+        canvas{
+         display: block;
+         margin: 0 auto;
+         background: #222;
+        }
+    </style>
 </head>
 <body>
-    <canvas></canvas>
+    <canvas id="gameCanvas" width="480" height="640"></canvas>
+    <script src="main.js"></script>
 </body>
 </html>
